# CodingAssistant-Clang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
UnitTest/: ASTUtility.h  CheckCast.cpp  CheckFuncLines.cpp  CheckGlobalVar.cpp  CheckInline.cpp  CheckMagicNumber.cpp  MatchArray.cpp  MatchAryAsPtr.cpp  MatchAuto.cpp  MatchBitField.cpp  MatchCMemFunc.cpp  MatchCString.cpp  MatchContainer.cpp  MatchDoStmt.cpp  MatchDynamicCast.cpp  MatchEnum.cpp  MatchForStmt.cpp  MatchFunCast.cpp  MatchFuncConstexpr.cpp  MatchGotoStmt.cpp  MatchHandleClass.cpp  MatchIntegerToChar.cpp  MatchLambda.cpp  MatchListInit.cpp  MatchMainCatch.cpp  MatchMultiDeclarations.cpp  MatchMultidimArrays.cpp  MatchNakedNew.cpp  MatchNamespace.cpp  MatchNarrowingConversion.cpp  MatchNewExpr.cpp  MatchNotPlainChar.cpp  MatchNull.cpp  MatchOneParmConstructor.cpp  MatchOnlyDefaultConstructor.cpp  MatchOverloading.cpp  MatchPassByValue.cpp  MatchPointerMatch.cpp  MatchPrivate.cpp  MatchRealloc.cpp  (+21 more)
cmake/: FindClang.cmake  FindLLVM.cmake
include/: ASTUtility.h  CodStd101.h  EffectiveCPP.h  ExceptNumber.h  MatchArray.h  MatchAryAsPtr.h  MatchAuto.h  MatchBitField.h  MatchCMemFunc.h  MatchCString.h  MatchCast.h  MatchContainer.h  MatchDoStmt.h  MatchDynamicCast.h  MatchEnum.h  MatchForStmt.h  MatchFunCast.h  MatchFuncConstexpr.h  MatchFuncLines.h  MatchGlobalVar.h  MatchGotoStmt.h  MatchHandleClass.h  MatchIntegerToChar.h  MatchLambda.h  MatchListInit.h  MatchMagicNumber.h  MatchMainCatch.h  MatchMultiDeclarations.h  MatchMultidimArrays.h  MatchNakedNew.h  MatchNamespace.h  MatchNarrowingConversion.h  MatchNewExpr.h  MatchNotPlainChar.h  MatchNull.h  MatchOneParmConstructor.h  MatchOnlyDefaultConstructor.h  MatchOverloading.h  MatchPassByValue.h  MatchPointerMath.h  (+20 more)
src/: MatchArray.cpp  MatchAryAsPtr.cpp  MatchAuto.cpp  MatchBitField.cpp  MatchCMemFunc.cpp  MatchCString.cpp  MatchCast.cpp  MatchContainer.cpp  MatchDoStmt.cpp  MatchDynamicCast.cpp  MatchEnum.cpp  MatchForStmt.cpp  MatchFunCast.cpp  MatchFuncConstexpr.cpp  MatchFuncLines.cpp  MatchGlobalVar.cpp  MatchGotoStmt.cpp  MatchHandleClass.cpp  MatchIntegerToChar.cpp  MatchLambda.cpp  MatchListInit.cpp  MatchMagicNumber.cpp  MatchMainCatch.cpp  MatchMultiDeclarations.cpp  MatchMultidimArrays.cpp  MatchNakedNew.cpp  MatchNamespace.cpp  MatchNarrowingConversion.cpp  MatchNewExpr.cpp  MatchNotPlainChar.cpp  MatchNull.cpp  MatchOneParmConstructor.cpp  MatchOnlyDefaultConstructor.cpp  MatchOverloading.cpp  MatchPassByValue.cpp  MatchPointerMatch.cpp  MatchPointerMath.cpp  MatchPrivate.cpp  MatchRealloc.cpp  MatchRefParm.cpp  (+19 more)
